# noah-bot

./: .gitignore  README.md  leaderboard.json  pyproject.toml  steallist.json  user_emojis.json
src/noah_bot/: __init__.py  ai.py  discord_formatter.py  main.py  steallist.py  tts.py  waifu_game.py
src/noah_bot/commands/: __init__.py  autogami.py  core.py  gochi.py  noah.py  relics.py  steallist.py  tts.py  vc_stats.py  waifu.py  waifuracer.py
src/noah_bot/modules/: __init__.py  ai.py  autogami.py  bot_context.py  daily_stats.py  discord_formatter.py  jarvis.py  leaderboard.py  noah_gochi.py  noah_gochi_ai.py  relics_game.py  send_message.py  steallist.py  tts.py  voice_manager.py
