[project]
name = "noah-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SamthinkGit", email = "sebastianmayorquin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "tinydb>=4.8.2",
]

[project.scripts]
noah-bot = "noah_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
